# dynamiqs

./: .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE  README.md  README_PYPI.md  Tree commutator.ipynb  conftest.py  debug.ipynb  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  remove_figs.py  remove_files.py  requirements-dev.txt  requirements.txt  setup.cfg  sitemap.xml  versions.json
.github/info/: exclude
.github/workflows/: ci.yml  doc.yml  main.yml  publish-doc-dev-qarray.yml  publish-doc-dev-smesolve.yml  publish-doc.yml
0.2/: 404.html  index.html  objects.inv  sitemap.xml
0.2/community/: citing.html  contributing.html  index.html  lets-talk.html
0.2/documentation/: index.html
0.2/python_api/: index.html
0.2/search/: search_index.json
0.3/: 404.html  CNAME  conftest.py  generate_python_api.py  hooks.py  index.html  objects.inv  sitemap.xml
0.3/community/: citing.html  contributing.html  index.html  lets-talk.html
0.3/documentation/: index.html
0.3/overrides/: home.html
0.3/python_api/: index.html
0.3/search/: search_index.json
benchmark/systems/: system.py  systems.py  transmon_gate.py
benchmarks/: README.md  run_benchmarks.ipynb
benchmarks/cat-cnot/: dynamiqs-bench.py  quantumoptics-bench.jl  qutip-bench.py  qutip-jax-bench.py
benchmarks/cr-gate/: dynamiqs-bench.py  quantumoptics-bench.jl  qutip-bench.py  qutip-jax-bench.py
benchmarks/ising-model/: dynamiqs-bench.py  quantumoptics-bench.jl  qutip-bench.py  qutip-jax-bench.py
benchmarks/kerr-oscillator/: dynamiqs-bench.py  quantumoptics-bench.jl  qutip-bench.py  qutip-jax-bench.py
benchmarks/models/: __init__.py  bench_model.py  cat_cnot.py  catcnot.py  crgate.py  cross_resonance_gate.py  driven_cavity.py  drivencav.py
benchmarks/systems/: README.md  cat_cnot.py  system.py  transmon_gate.py
benchmarks/transmon-pi/: dynamiqs-bench.py  quantumoptics-bench.jl  qutip-bench.py  qutip-jax-bench.py
community/: citing.html  contributing.html  index.html  lets-talk.html
dev/: 404.html  generate_python_api.py  index.html  objects.inv  sitemap.xml
dev-qarray/: 404.html  index.html  objects.inv  sitemap.xml
dev-qarray/community/: citing.html  contributing.html  index.html  lets-talk.html
dev-qarray/documentation/: index.html
dev-qarray/javascripts/: katex.js
dev-qarray/python_api/: index.html
dev-qarray/search/: search_index.json
dev-smesolve/: 404.html  generate_python_api.py  index.html  objects.inv  sitemap.xml
dev-smesolve/community/: citing.html  contributing.html  index.html  lets-talk.html
dev-smesolve/documentation/: index.html
dev-smesolve/python_api/: index.html
dev-smesolve/search/: search_index.json
dev/community/: citing.html  contributing.html  index.html  lets-talk.html
dev/documentation/: index.html
dev/python_api/: index.html
dev/search/: search_index.json
docs/: conftest.py  gen_ref_pages.py  generate_python_api.py  generate_reference.py  glossary.md  hooks.py  index.md  remove_files.py
docs/applications/: experimental-fits.md
docs/community/: citing.md  contributing.md  index.md
docs/content/: conftest.py
docs/data/: experimental-fits-time.npy
docs/developers/: steadystate_gradient_optimization.md
docs/documentation/: index.md
docs/figs-docs/: .gitignore  .gitkeep
docs/getting_started/: _foo.md  cite-us.md  citing.md  contributing.md  discussion.md  examples.ipynb  examples.md  index.md  installation.md  more-features.md  sharp-bits.md  talk.md  the-dynamiqs-project.md  whatis.md
docs/javascripts/: katex.js  mathjax.js
docs/overrides/: base.html  home.html  main.html
docs/python_api/: index.md  navigation.md  solvers.md  utils.md
docs/reference/: foo.md  index.md  navigation.md  solvers.md  utils.md
docs/stylesheets/: extra.css  home.css  jupyter.css  theme.css
docs/tutorials/: batching-simulations.md  batching.md  closed-system.md  closed-systems.md  defining-hamiltonian.md  defining-hamiltonians.md  ecd.md  example.ipynb  experimental-fits-data.npy  experimental-fits.md  gpu.md  gradients.md  index.md  open-system.md  open-systems.md  optimal_control.md  (+8 more)
documentation/: index.html
dynamiqs/: __init__.py  _checks.py  _types.py  _utils.py  conftest.py  custom_types.py  gradient.py  helpers.py  hermitian_conjugate.py  method.py  options.py  progress_bar.py  progress_meter.py  pulse.py  qarray.py  rand.py  random.py  result.py  solver.py  solvers.py  sparse.py  sparse_qarray.py  stochastic_helpers.py  time_array.py  time_qarray.py  time_tensor.py  time_tree.py  types.py
dynamiqs_old/: gradient.py  solver.py
examples/: dispersive_readout.py  test_mcsolve.py
getting_started/: citing.html  contributing.html  examples.html  index.html  installation.html  lets-talk.html  sharp-bits.html  whatis.html
includes/: glossary.md
javascripts/: katex.js
overrides/: main.html
python_api/: index.html
search/: search_index.json
stylesheets/: extra.css  home.css  theme.css
tests/: README.md  conftest.py  integrator_tester.py  order.py  qarray.py  solver_tester.py  system.py  test_cached_computation_intermediaries.py  test_foo.py  test_h_caching.py  test_hc.py  test_mesolve.py  test_plot.py  test_plots.py  test_sparse.py  test_time_array.py  test_time_qarray.py  test_time_tensor.py  test_time_tree.py  test_utils.py
torchq/: __init__.py  mesolve.py  q_tensor.py  qtensor.py  smesolve.py  utils.py
torchqdynamics/: __init__.py  adaptive.py  adaptive_ode_solver.py  batching.py  decorators.py  mesolve.py  ode_adjoint_qsolver.py  ode_adjoint_solver.py  ode_forward_qsolver.py  ode_forward_solver.py  odeint.py  operators.py  options.py  progress_bar.py  progressbar.py  propagator.py  qsolver.py  qtensor.py  smesolve.py  solver.py  solver_option.py  solver_options.py  solver_utils.py  ssolve.py  states.py  tensor_formatter.py  tensor_types.py  types.py  utils.py
tutorials/: batching-simulations.html  closed-system.html  computing-gradients.html  index.html  open-system.html  time-dependent-operators.html  workflow.html
v0.2/: 404.html  sitemap.xml
(+1621 files in other folders)
