[project]
name = "dynamiqs"
description = "High-performance quantum systems simulation with JAX (GPU-accelerated & differentiable solvers)."
authors = [
  { name = "Pierre Guilmin", email = "pierreguilmin@gmail.com" },
  { name = "Ronan Gautier", email = "ron.gautier@gmail.com" },
  { name = "Adrien Bocquet", email = "adrienbocquet38@gmail.com" },
  { name = "Elie Genois", email = "elie.genois@usherbrooke.ca" },
  { name = "Daniel Weiss", email = "daniel.kamrath.weiss@gmail.com" },
]
dynamic = ["version"]
license = { file = "LICENSE" }
readme = "README_PYPI.md"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.10"
dependencies = [
    "qutip>=4.7.5",
    "scipy",
    "numpy",
    "matplotlib",
    "tqdm",
    "jax>=0.4.36", # >=0.4.36 for GPU eig support
    "jaxtyping",
    "diffrax>=0.6.1",  # for complex support (0.5.0), progress meter (0.5.1), compatibility with jax 0.4.36 (0.6.1)
    "equinox",
    "optimistix",  # for typing of root-finding in Event method
    "pillow",
    "cmasher>=1.8.0",  # avoid matplotlib colormaps deprecation warning
    "ipython",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/dynamiqs/dynamiqs"
Documentation = "https://www.dynamiqs.org/"
Repository = "https://github.com/dynamiqs/dynamiqs"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project.optional-dependencies]
dev = [
    "taskipy",
    "ruff>=0.8",
    "codespell",
    "pytest>=8.0",
    "pytest-ordering",
    "pytest-sugar",
    "pytest-xdist",
    "mkdocs-material",
    "mkdocstrings[python]!=1.12.0", # bug with parsing strings in signatures, see https://github.com/mkdocstrings/python/issues/191
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
    "mkdocs-simple-hooks",
    "mkdocs-glightbox",
    "mkdocs-exclude",
    "sybil>=6",
    "black",  # needed by mkdocstrings to format function signatures
    "flit",
    "mike",
    "optax",  # for gradient descent tutorials
]

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = [
    "F", "E", "W", "C90", "I", "D", "UP", "YTT", "ANN", "BLE", "B", "A", "C4", "FA",
    "INP", "NPY201", "PIE", "T20", "PYI", "PT", "RSE", "RET", "SLF", "SIM", "INT",
    "ARG", "PTH", "PL", "TRY", "FLY", "NPY", "RUF",
]
extend-select = ["D204", "D400", "D404", "D406", "D410"]
ignore = [
    "F403", "F405",
    "E203", "E731", "E741",
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "D205", "D405", "D417",
    "ANN002", "ANN003", "ANN401",
    "ARG001",
    "RET505", "RUF022",
    "TRY003",
    "PLR0913", "PLR2004",
    "PT028",
    "SLF001",
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.flake8-annotations]
suppress-none-returning = true

[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"docs/**.py" = ["INP001", "ARG001", "ANN"]
"conftest.py" = ["ANN"]
"tests/**.py" = ["ANN"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.codespell]
skip = ".git,*.ipynb"
ignore-words-list = "ket, braket, SME"

# === taskipy tasks definition ===

[tool.taskipy.tasks.lint]
cmd = 'echo "\n>>> ruff check --fix" && ruff check --fix'
help = "lint the code (ruff)"

[tool.taskipy.tasks.format]
cmd = 'echo "\n>>> ruff format" && ruff format'
help = "auto-format the code (ruff)"

[tool.taskipy.tasks.codespell]
cmd = 'echo "\n>>> codespell" && codespell tests dynamiqs'
help = "check for misspellings (codespell)"

[tool.taskipy.tasks.clean]
cmd = 'task lint && task format && task codespell'
help = "clean the code (ruff + codespell)"

[tool.taskipy.tasks.test]
cmd = 'echo "\n>>> pytest -n=auto tests" && pytest -n=auto tests'
help = "run the unit tests suite (pytest)"

[tool.taskipy.tasks.doctest-code]
cmd = 'echo "\n>>> pytest dynamiqs" && python docs/remove_figs.py docs/figs_code && pytest dynamiqs'
help = "check code docstrings examples (doctest)"

[tool.taskipy.tasks.doctest-docs]
cmd = 'echo "\n>>> pytest docs" && python docs/remove_figs.py docs/figs_docs && pytest docs'
help = "check documentation examples (doctest)"

[tool.taskipy.tasks.doctest]
cmd = 'task doctest-code && task doctest-docs'
help = "check all examples (doctest)"

[tool.taskipy.tasks.docbuild]
cmd = 'mkdocs build'
help = "build the documentation website"

[tool.taskipy.tasks.docserve]
cmd = 'mkdocs serve'
help = "preview documentation website with hot-reloading"

[tool.taskipy.tasks.all]
cmd = 'task clean && task test && task doctest'
help = "run all tasks before a commit (ruff + codespell + pytest + doctest)"

[tool.taskipy.tasks.ci]
cmd = '''echo "\n>>> ruff check" && ruff check &&
         echo "\n>>> ruff format --check" && ruff format --check &&
         task codespell &&
         task test &&
         task doctest &&
         task docbuild'''
help = "run all the CI checks"
